corpus/functions.txt
====================
simple function call
====================

function_name()

-----------------

(source_file
 (function_call
  (identifier)
  (parameter_list)))


====================
function with member access
====================
function_name().member_name
-----------------
(source_file
 (member_access
  (function_call
   (identifier)
   (parameter_list))
  (identifier)))


====================
function call of member 
====================
function_name.member_name()
-----------------
(source_file
 (member_access
  (identifier)
  (function_call
   (identifier)
   (parameter_list))))

=============================
function call with parameters
=============================

function_name(parameter1, parameter2, parameter3)

-----------------

(source_file
 (function_call
  (identifier)
  (parameter_list
    (identifier)
    (identifier)
    (identifier))))




=============================
function call with named parameters
=============================

function_name(a: 5, b: parameter2)

-----------------

(source_file
 (function_call
  (identifier)
  (parameter_list
   (named_parameter (identifier) (number))
   (named_parameter (identifier) (identifier)))))
